--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-- name: Setup Apache Spark
+name: Setup Apache Spark
   # You may pin to the exact commit or the version.
   # uses: vemonet/setup-spark@e8cb86fc6de0c73c110a9744d8a0d526384b5b2d
   uses: vemonet/setup-spark@v1
@@ -10,4 +10,4 @@
     # Directly provide the URL to download the Spark binary compressed as .tgz
     spark-url: # optional
     # Py4J version.
-    py4j-version: # optional, default is 0.10.9
+#     py4j-version: # optional, default is 0.10.9
