--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: Setup Apache Spark
   # You may pin to the exact commit or the version.
   # uses: vemonet/setup-spark@e8cb86fc6de0c73c110a9744d8a0d526384b5b2d
-  uses: vemonet/setup-spark@v1
+uses: vemonet/setup-spark@v1
   with:
     # Apache Spark version to install, see https://spark.apache.org/downloads.html
     spark-version: 2.4.5
@@ -10,4 +10,4 @@ name: Setup Apache Spark
     # Directly provide the URL to download the Spark binary compressed as .tgz
     spark-url: # optional
     # Py4J version.
-#     py4j-version: # optional, default is 0.10.9
+    py4j-version: # optional, default is 0.10.9
