--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,9 @@
-name: Setup Apache Spark
-# You may pin to the exact commit or the version.
-# uses: vemonet/setup-spark@e8cb86fc6de0c73c110a9744d8a0d526384b5b2d
-uses: vemonet/setup-spark@v1
-  # Apache Spark version to install, see https://spark.apache.org/downloads.html
-  spark-version: 2.4.5
-  # Hadoop version
-  hadoop-version: # optional, default is 3.2
-  # Directly provide the URL to download the Spark binary compressed as .tgz
-  spark-url: # optional
-  # Py4J version.
-  py4j-version: # optional, default is 0.10.9
+- name: Setup Python
+  uses: actions/setup-python@v2.2.2
+  with:
+    # Version range or exact version of a Python version to use, using SemVer's version range syntax.
+    python-version: # optional, default is 3.x
+    # The target architecture (x86, x64) of the Python interpreter.
+    architecture: # optional
+    # Used to pull python distributions from actions/python-versions. Since there's a default, this is typically not supplied by the user.
+    token: # optional, default is ${{ github.token }}
