--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-- name: Setup Python
+name: Setup Python
   uses: actions/setup-python@v2.2.2
   with:
     # Version range or exact version of a Python version to use, using SemVer's version range syntax.
