--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,13 @@
-name: Setup Python
-  uses: actions/setup-python@v2.2.2
+steps:
+- uses: actions/setup-python@v2
   with:
-    # Version range or exact version of a Python version to use, using SemVer's version range syntax.
-    python-version: # optional, default is 3.x
-    # The target architecture (x86, x64) of the Python interpreter.
-    architecture: # optional
-    # Used to pull python distributions from actions/python-versions. Since there's a default, this is typically not supplied by the user.
-    token: # optional, default is ${{ github.token }}
+    python-version: '3.7'
+- uses: actions/setup-java@v1
+  with:
+    java-version: '11'
+
+- uses: vemonet/setup-spark@v1
+  with:
+    spark-version: '2.4.5'
+
+- run: spark-submit --version
