--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,21 @@
-steps:
-- uses: actions/setup-python@v2
-  with:
-    python-version: '3.7'
-- uses: actions/setup-java@v1
-  with:
-    java-version: '11'
-
-- uses: vemonet/setup-spark@v1
-  with:
-    spark-version: '2.4.5'
-
-- run: spark-submit --version
+name: 'Setup Python'
+description: 'Set up a specific version of Python and add the command-line tools to the PATH.'
+author: 'GitHub'
+inputs:
+  python-version:
+    description: "Version range or exact version of a Python version to use, using SemVer's version range syntax."
+    default: '3.x'
+  architecture:
+    description: 'The target architecture (x86, x64) of the Python interpreter.'
+  token:
+    description: Used to pull python distributions from actions/python-versions. Since there's a default, this is typically not supplied by the user.
+    default: ${{ github.token }}
+outputs:
+  python-version:
+    description: "The installed python version. Useful when given a version range as input."
+runs:
+  using: 'node12'
+  main: 'dist/index.js'
+branding:
+  icon: 'code'
+  color: 'yellow'
