--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,6 +27,8 @@ jobs:
         uses: vemonet/setup-spark@v1
         with: 
           spark-version: '2.4.5'
+          py4j-version: '0.10.7'
+        
          
       # Runs a single command using the runners shell
       - name: Run a one-line script
