--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -38,11 +38,11 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
-          
-      - name: Run a notebook
-        uses: yaananth/run-notebook@v1
-        with:
-          notebook: "./tests/test_colorectal.ipynb"
+
+      - name: execute py script # run the run.py to get the latest data
+        run: |
+          python test_colorectal.py
+
  
       
       
