--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -41,7 +41,7 @@ jobs:
 
       - name: execute py script # run the run.py to get the latest data
         run: |
-          python test_colorectal.py
+          python ./tests/test_colorectal.py
 
  
       
