--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,20 +28,16 @@ jobs:
         with: 
           spark-version: '2.4.5'
           py4j-version: '0.10.7'
-         
+          
+      - run: spark-submit --version
+          
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
-
+      
       - name: execute py script # run the run.py to get the latest data
         run: |
-          python ./tests/test_colorectal.py
+          spark-submit tests/test_colorectal.py
 
  
       
