--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,13 +22,19 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Setup Apache Spark
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-        uses: vemonet/setup-spark@v1
-        with: 
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.8'
+          
+      - uses: actions/setup-java@v1
+        with:
+          java-version: '11'
+
+      - uses: vemonet/setup-spark@v1
+        with:
           spark-version: '2.4.5'
           py4j-version: '0.10.7'
-          
+
       - run: spark-submit --version
           
       # Runs a single command using the runners shell
