--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,7 +24,7 @@ jobs:
     steps:
       - uses: actions/setup-python@v2
         with:
-          python-version: '3.8'
+          python-version: '3.7.3'
           
       - uses: actions/setup-java@v1
         with:
@@ -43,7 +43,7 @@ jobs:
       
       - name: execute py script # run the run.py to get the latest data
         run: |
-          spark-submit tests/test_colorectal.py
+          python tests/test_colorectal.py
 
  
       
