--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,9 +22,13 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - uses: actions/setup-python@v1
+      - name: Setup Python
+        uses: actions/setup-python@v2.2.2
         with:
+          # Version range or exact version of a Python version to use, using SemVer's version range syntax.
           python-version: '3.7.3'
+          # The target architecture (x86, x64) of the Python interpreter.
+          architecture: 'x86'
           
       - uses: actions/setup-java@v1
         with:
