--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,13 +22,11 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Setup Python
-        uses: actions/setup-python@v2.2.2
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
         with:
-          # Version range or exact version of a Python version to use, using SemVer's version range syntax.
-          python-version: '3.7.3'
-          # The target architecture (x86, x64) of the Python interpreter.
-          architecture: 'x64'
+          python-version: '3.7' # Version range or exact version of a Python version to use, using SemVer's version range syntax
+          architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
           
       - uses: actions/setup-java@v1
         with:
