--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -38,8 +38,8 @@ jobs:
           py4j-version: '0.10.7'
 
       - run: |
-          conda install pyspark==2.4.5
-          conda install pandas matplotlib seaborn
+          pip install pyspark==2.4.5
+          pip install pandas matplotlib seaborn
       
       - name: execute py script # run the run.py to get the latest data
         run: |
