--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -47,7 +47,7 @@ jobs:
       
       - name: execute py script # run the run.py to get the latest data
         run: |
-          ipython tests/test_colorectal.py
+          spark-submit tests/test_colorectal.py
 
  
       
