--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,19 +25,26 @@ jobs:
       - uses: actions/checkout@v1
       - uses: actions/setup-python@v1
         with:
-          python-version: '3.7.12' # Version range or exact version of a Python version to use, using SemVer's version range syntax
+          python-version: '3.7.12' # Version range or exact version of a Python version to use.
           architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
           
       - uses: actions/setup-java@v1
         with:
           java-version: '11'
 
-      - run: |
-          pip install pandas matplotlib seaborn notebook pyspark==2.4.5
-      
-      - name: execute py script # run the run.py to get the latest data
+      - name: Install dependencies
         run: |
-          spark-submit tests/test_colorectal.py
+          python -m pip install --upgrade pip
+          pip install flake8 pytest pandas matplotlib seaborn notebook pyspark==2.4.5
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      
+      - name: Test with pytest
+        run: |
+          pytest
+      
+#       - name: execute py script # run the run.py to get the latest data
+#         run: |
+#           spark-submit tests/test_colorectal.py
 
  
       
