--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -37,7 +37,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install flake8 pytest pandas matplotlib seaborn notebook pyspark==2.4.5
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      
+     
+  test:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+    steps:
       - name: Test with pytest
         run: |
           pytest
